# pitch-detection

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: main.yaml
benches/: utils_benchmark.rs
src/: lib.rs
src/detector/: autocorrelation.rs  internals.rs  mcleod.rs  mod.rs  yin.rs
src/detector/polyphonic/: comb.rs  mod.rs
src/float/: mod.rs
src/utils/: buffer.rs  filters.rs  mod.rs  peak.rs
tests/: main.rs
tests/samples/: LICENSE.txt  README.md
